Refactor user registration and OTP verification process
- Updated .gitignore to include .env file.
- Modified README.md to include branch creation command.
- Refactored PasswordController to remove unused sendotp method and improve OTP verification logic.
- Updated UserController to add a new endpoint for profile photo upload and refactor user registration logic.
- Added RegisterController to handle OTP sending, validation, and user registration.
- Created Checkotp model and migration for OTP storage.
- Updated API routes to include new registration and OTP endpoints.
- Enhanced API documentation for new endpoints and updated existing ones.
- Implemented fallback routes for 404 responses in both API and web routes.
