# app/Http/Controllers/API/UserController.php
@@ -15,84 +15,40 @@ use App\Http\Controllers\API\BaseController as BaseController;
  */
 class UserController extends BaseController
 {
-    //Account creation
+    //Photo de profil
     /**
-    * @OA\Post(
-    *   path="/api/users/register",
-    *   tags={"Users"},
-    *   operationId="register",
-    *   description="Account creation",
-    *   @OA\RequestBody(
-    *      required=true,
-    *      @OA\MediaType(
-    *          mediaType="multipart/form-data",
-    *          @OA\Schema(
-    *          required={"lg", "lastname", "firstname", "gender", "number", "email", "birthday", "birthplace", "profession", "village", "street_number", "hourse_number", "family_number", "fullname_peson", "number_person", "residence_person", "cellule_id", "maritalstatus_id", "district_id", "fullname_father", "fullname_mother", "photo"},
-    *         @OA\Property(property="lg", type="string"),
-    *         @OA\Property(property="lastname", type="string"),
-    *         @OA\Property(property="firstname", type="string"),
-    *         @OA\Property(property="gender", type="string"),
-    *         @OA\Property(property="number", type="string"),
-    *         @OA\Property(property="email", type="string"),
-    *         @OA\Property(property="birthday", type="date"),
-    *         @OA\Property(property="birthplace", type="string"),
-    *         @OA\Property(property="profession", type="string"),
-    *         @OA\Property(property="village", type="string"),
-    *         @OA\Property(property="street_number", type="string"),
-    *         @OA\Property(property="hourse_number", type="string"),
-    *         @OA\Property(property="family_number", type="integer"),
-    *         @OA\Property(property="fullname_peson", type="string"),
-    *         @OA\Property(property="number_person", type="string"),
-    *         @OA\Property(property="residence_person", type="string"),
-    *         @OA\Property(property="cellule_id", type="integer"),
-    *         @OA\Property(property="district_id", type="integer"),
-    *         @OA\Property(property="bp", type="string"),
-    *         @OA\Property(property="diplome", type="string"),
-    *         @OA\Property(property="distinction", type="string"),
-    *         @OA\Property(property="maritalstatus_id", type="integer"),
-    *         @OA\Property(property="nationality_id", type="integer"),
-    *         @OA\Property(property="fullname_father", type="string"),
-    *         @OA\Property(property="fullname_mother", type="string"),
-    *         @OA\Property(property="photo", type="string", format="binary"),
-    *          )
-    *      )
-    *   ),
-    *   @OA\Response(response=200, description="Création de compte éffectuée avec succès."),
-    *   @OA\Response(response=401, description="Echec de Création de compte."),
-    *   @OA\Response(response=404, description="Page introuvable."),
-    * )
-    */
-    public function store(Request $request): JsonResponse
+     * @OA\Post(
+     *   path="/api/users/photo",
+     *   tags={"Users"},
+     *   operationId="photo",
+     *   description="Modification de la photo de profil",
+     *   security={{"bearer":{}}},
+     *   @OA\RequestBody(
+     *      required=true,
+     *      @OA\MediaType(
+     *          mediaType="multipart/form-data",
+     *          @OA\Schema(
+     *             required={"photo"},
+     *             @OA\Property(property="photo", type="string", format="binary"),
+     *          )
+     *      )
+     *   ),
+     *   @OA\Response(response=200, description="Photo de profil modifiée avec succès."),
+     *   @OA\Response(response=401, description="Non autorisé."),
+     *   @OA\Response(response=404, description="Page introuvable."),
+     * )
+     */
+    public function photo(Request $request)
     {
-        Log::notice("User::store : " . json_encode($request->all()));
+        $user = Auth::user();
         //Validator
         $validator = Validator::make($request->all(), [
-            'lg' => 'required',
-            'lastname' => 'required',
-            'firstname' => 'required',
-            'gender' => 'required|in:M,F',
-            'number' => 'required|unique:users,number',
-            'email' => 'required|email|unique:users,email',
-            'birthday' => 'required|date_format:Y-m-d',
-            'birthplace' => 'required',
-            'profession' => 'required',
-            'village' => 'required',
-            'street_number' => 'required',
-            'hourse_number' => 'required',
-            'family_number' => 'required',
-            'fullname_peson' => 'required',
-            'number_person' => 'required',
-            'fullname_father' => 'required',
-            'fullname_mother' => 'required',
-            'residence_person' => 'required',
-            'maritalstatus_id' => 'required',
-            'cellule_id' => 'required',
-            'district_id' => 'required',
 			'photo' => 'required|file|mimes:png,jpeg,jpg|max:2048',
         ]);
+		App::setLocale($user->lg);
         //Error field
         if ($validator->fails()) {
-            Log::warning("User::store - Validator : " . json_encode($request->all()));
+            Log::warning("User::photo - Validator : " . json_encode($request->all()));
             return $this->sendSuccess('Champs invalides.', $validator->errors(), 422);
         }
         // Upload photo
@@ -100,101 +56,19 @@ class UserController extends BaseController
         $image = $request->file('photo');
         $ext = $image->getClientOriginalExtension();
         $photo = User::filenameUnique($ext);
-        if(!($image->move($dir, $photo))){
-            Log::warning("User::store - Erreur de téléchargement de la photo : " . $e->getMessage() . " " . json_encode($request->all()));
+        if (!($image->move($dir, $photo))) {
+            Log::warning("User::photo - Erreur de téléchargement de la photo : " . $e->getMessage());
             return $this->sendError("Erreur de téléchargement de la photo.");
         }
-        // Formatage du nom et prénoms
-        $email = Str::lower($request->email);
-        $lastname = mb_strtoupper($request->lastname, 'UTF-8');
-        $firstname = mb_convert_case(Str::lower($request->firstname), MB_CASE_TITLE, "UTF-8");
-        $set = [
-            'lastname' => $lastname,
-            'firstname' => $firstname,
-            'gender' => $request->gender,
-            'number' => $request->number,
-            'email' => $email,
-            'birthday_at' => $request->birthday,
-            'birthplace' => $request->birthplace,
-            'profession' => $request->profession,
-            'village' => $request->village,
-            'street_number' => $request->street_number,
-            'hourse_number' => $request->hourse_number,
-            'family_number' => $request->family_number,
-            'register_number' => $request->register_number,
-            'bp' => $request->bp,
-            'diplome' => $request->diplome,
-            'distinction' => $request->distinction,
-            'fullname_peson' => $request->fullname_peson,
-            'number_person' => $request->number_person,
-            'residence_person' => $request->residence_person,
-            'photo' => $photo,
-            'lg' => $request->lg,
-            'cellule_id' => $request->cellule_id,
-            'district_id' => $request->district_id,
-            'nationality_id' => $request->nationality_id,
-            'maritalstatus_id' => $request->maritalstatus_id,
-            'password' => Hash::make($request->password),
-        ];
-        DB::beginTransaction(); // Démarrer une transaction
         try {
-            // Création de l'utilisateur
-            $user = User::create($set);
-            DB::commit(); // Valider la transaction
-            // Retourner les données de l'utilisateur
-            // Father
-            Parents::create([
-                'type_id' => 1,
-                'user_id' => $user->id,
-                'fullname' => $request->fullname_father,
-            ]);
-            // Mother
-            Parents::create([
-                'type_id' => 2,
-                'user_id' => $user->id,
-                'fullname' => $request->fullname_mother,
-            ]);
-            $data = [
-                'lastname' => $lastname,
-                'firstname' => $firstname,
-                'gender' => $request->gender,
-                'number' => $request->number,
-                'email' => $email,
+            $set = [
+                'photo' => $photo,
             ];
-            // Gender
-            if ($request->gender == 'M')
-                $gender = __('message.mr');
-            else
-                $gender = __('message.mrs');
-            //subject
-            $subject = __('message.creataccount');
-            $message = "<div style='color:#156082;font-size:11pt;line-height:1.5em;font-family:Century Gothic'>"
-            . __('message.dear') . " " . $gender . " " . $request->lastname . ",<br><br>"
-            . __('message.txtaccount') . "<br><br>"
-            . __('message.bestregard') . " !<br>
-            <hr style='color:#156082;'>
-            </div>";
-            // Envoi de l'email
-            $this->sendMail($email, '', $subject, $message);
-            // Mail aux admins
-            $admins = User::where('profile_id', 1)->get();
-            foreach ($admins as $admin) :
-                $message = "<div style='color:#156082;font-size:11pt;line-height:1.5em;font-family:Century Gothic'>"
-                . __('message.dear') . " Admin,<br><br>"
-                . __('message.txtadmin') . "<br><b>"
-                . $gender . " " . $request->lastname . " " . $request->firstname
-                . "</b><br><br>"
-                . __('message.bestregard') . " !<br>
-                <hr style='color:#156082;'>
-                </div>";
-                // Envoi de l'email
-                $this->sendMail($admin->email, '', $subject, $message);
-            endforeach;
-            return $this->sendSuccess('Utilisateur enregistré avec succès.', $data, 201);
-        } catch (\Exception $e) {
-            DB::rollBack(); // Annuler la transaction en cas d'erreur
-            Log::warning("User::store - Erreur enregistrement de l'utilisateur : " . $e->getMessage() . " " . json_encode($set));
-            return $this->sendError("Erreur enregistrement de l'utilisateur");
+            User::findOrFail($user->id)->update($set);
+            return $this->sendSuccess('Photo de profil modifiée avec succès.', [], 201);
+        }catch(\Exception $e) {
+            Log::warning("Photo::store - Erreur de modification de la photo de profil : " . $e->getMessage());
+            return $this->sendError("Erreur de modification de la photo de profil");
         }
     }
     //Authentification
