# routes/api.php
@@ -4,9 +4,10 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
 use App\Http\Controllers\API\{
-    UserController,
-    SettingController,
     PasswordController,
+    RegisterController,
+    SettingController,
+    UserController,
 };
 
 /*
@@ -19,16 +20,26 @@ use App\Http\Controllers\API\{
 | be assigned to the "api" middleware group. Make something great!
 |
 */
+
+//404
+Route::fallback(function() {
+  $response = [
+    'status' => 404,
+    'message' => "Page introuvable.",
+    'data' => [],
+  ];
+  return response()->json($response, 404);
+});
 // Route pour l'inscription
-Route::post('users/register', [UserController::class, 'store']);
+Route::post('register/sendotp', [RegisterController::class, 'sendotp']);
+Route::post('register/validotp', [RegisterController::class, 'validotp']);
+Route::post('register/forms', [RegisterController::class, 'store']);
 // Route pour la connexion
 Route::post('users/auth', [UserController::class, 'login']);
 // Routes pour les mots de passe oubliés
-Route::post('password/sendotp', [PasswordController::class, 'sendotp']);
 Route::post('password/verifemail', [PasswordController::class, 'verifemail']);
 Route::post('password/verifotp', [PasswordController::class, 'verifotp']);
 Route::post('password/addpass', [PasswordController::class, 'addpass']);
-
 // Route pour les paramètres
 Route::get('settings/country/{lg}', [SettingController::class, 'country']);
 Route::get('settings/province/{lg}', [SettingController::class, 'province']);
@@ -41,6 +52,8 @@ Route::get('settings/district/{lg}/{province_id}', [SettingController::class, 'd
 Route::middleware('auth:api')->group( function () {
     // Route pour les mots de passe
     Route::post('password/editpass', [PasswordController::class, 'editpass']);
+    // Route pour la photo de profil
+    Route::post('users/photo', [UserController::class, 'photo']);
     // Route pour la deconnexion
     Route::post('users/logout', [UserController::class, 'logout']);
 });
